[package]
name = "rumi"
version = "0.3.0"
authors = ["Seth Stadick <sstadick@gmail.com>", "Schaudge King <yuanshenran@gmail.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/Schaudge/rumi"
description = "PCR Deduplication via directional adjacency"
readme = "README.md"
documentation = "https://docs.rs/rumi"
categories = ["algorithms", "science"]
keywords = ["bioinformatics", "umi", "dedup", "genomics"]

[lib]
name = "rumi_lib"
path = "src/lib.rs"

[[bin]]
name = "rumi"
path = "src/main.rs"

[dependencies]
clap = "2.33"
rust-htslib = "0.38.2"
rayon = "1.5"
basebits = "1.2"
